[gd_scene load_steps=8 format=3 uid="uid://ctxg67e3djhyp"]

[ext_resource type="Texture2D" uid="uid://syn77p5nkxiu" path="res://assets/tileset.png" id="1_fmgpq"]
[ext_resource type="Script" path="res://scripts/lever.gd" id="1_tnn5u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fwmrx"]
atlas = ExtResource("1_fmgpq")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxahs"]
atlas = ExtResource("1_fmgpq")
region = Rect2(48, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_r6fnn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwmrx")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxahs")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w02ty"]
size = Vector2(16, 13)

[sub_resource type="LabelSettings" id="LabelSettings_ui8x5"]

[node name="Lever" type="Area2D"]
visible = false
script = ExtResource("1_tnn5u")

[node name="LeverSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r6fnn")
animation = &"left"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_w02ty")

[node name="Text" type="Label" parent="."]
visible = false
offset_left = -25.0
offset_top = -28.0
offset_right = 25.0
offset_bottom = -5.0
text = "ENTER"
label_settings = SubResource("LabelSettings_ui8x5")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
